agregar encabezados y parrafos

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>mi pagina personal</title>
 </head>
 <body>
+    <h1>¡Hola mi nombre es brayan alejandro</h1>
+    <p> bienvenido a mi primera pagina web</p>
+    <h2>sobre mi</h2>
+    <p>me gusta los video juegos y el anime</p>
+    <hr>
+    <br>
     
 </body>
 </html>
